--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /bower_components/
 /node_modules/
 /.pulp-cache/
+.psc-ide-port
 /output/
 /generated-docs/
 /.psc-package/
@@ -8,3 +9,4 @@
 /.purs*
 /.psa*
 /.spago
+.index.js
